--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 Flask = "*"
+Flask-Cors="3.0.9"
+gunicorn="20.0.4"
+pandas="1.1.1"
 
 [requires]
 python_version = "3.8"
